Fix text align

--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ div img {
 
 h2 {
   margin: 1.5rem;
-  text-align: center;
+  text-align: left;
 }
 
 p {
